--- a/app/src/main/res/layout/adapter_ship.xml
+++ b/app/src/main/res/layout/adapter_ship.xml
@@ -20,29 +20,18 @@
 
             <com.google.android.material.textview.MaterialTextView
                 android:id="@+id/mtv_name"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="2"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
                 android:textColor="@color/black"
                 android:textSize="16sp"
                 android:textStyle="bold"
-                tools:text="CR90 corvette" />
-
-            <com.google.android.material.textview.MaterialTextView
-                android:id="@+id/mtv_model"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:ellipsize="end"
-                android:gravity="end"
-                android:textSize="12sp"
                 tools:text="CR90 corvette" />
 
         </androidx.appcompat.widget.LinearLayoutCompat>
 
         <com.google.android.material.textview.MaterialTextView
             android:id="@+id/mtv_manufacturer"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="4dp"
             tools:text="Corellian Engineering Corporation" />
